--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
             border-radius: 8px;
             font-size: 15px;
             font-weight: bold;
-            color:#FFFFFF;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -78,16 +77,20 @@
             margin: 0px 8px 13px 8px;
         }
         .dding {
-            background-color: #FF773C;
+            background-color: #FCFCFC;
+            color: #FF4D58;
         }
         .online {
             background-color: #e8344e;
+            color:#FFFFFF;
         }
         .hang {
             background-color: #f50000;
+            color:#FFFFFF;
         }
         .chang {
             background-color: #0f16ae;
+            color:#FFFFFF;
         }
         .footer {
             color: #333333;
@@ -108,7 +111,7 @@
         </div>
         <div class="buttons">
             <a class="chang"target="_blank" href="https://chang.spartacodingclub.kr/">{창} - IT 창업 부트캠프</a>
-            <a class="dding" target="_blank" href="https://ddingdong.spartacodingclub.kr/">띵동코딩 - 온라인 코딩 학습지</a>
+            <a class="dding" target="_blank" href="https://spartacodingclub.kr/blog">블로그 - 스파르타의 이야기를 소개합니다.</a>
         </div>
         <div class="footer">@SpartaCodingClub</div>
     </div>
