--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
         <div class="profile"></div>
         <h1 class="main">스파르타코딩클럽</h1>
         <p class="sub">완주까지 함께 찐한 관리, 스파르타코딩클럽</p>
-        <a class="bigbutton"target="_blank" href="https://spartacodingclub.kr/online/myprofile">[무료특강] 나만의 프로필 링크 만들기</a>
         <div class="buttons">
+            <a class="dding" target="_blank" href="https://spartacodingclub.kr/blog/teamsparta-interview-pm3">팀스파르타 PM의 이야기</a>
+            <a class="bigbutton"target="_blank" href="https://spartacodingclub.kr/online/myprofile">[무료특강] 나만의 프로필 링크 만들기</a>
             <a class="online"target="_blank" href="https://spartacodingclub.kr/">스파르타코딩클럽</a>
             <a class="hang" target="_blank" href="https://hanghae99.spartacodingclub.kr/">항해99 - 99일만에 개발자로</a>
         </div>
         <div class="buttons">
             <a class="chang"target="_blank" href="https://chang.spartacodingclub.kr/">{창} - IT 창업 부트캠프</a>
-            <a class="dding" target="_blank" href="https://spartacodingclub.kr/blog">블로그 - 스파르타의 이야기를 소개합니다.</a>
         </div>
         <div class="footer">@SpartaCodingClub</div>
     </div>
