--- a/index.html
+++ b/index.html
@@ -76,20 +76,21 @@
             box-shadow: 0px 4px 16px rgba(232, 52, 78, 0.2);
             margin: 0px 8px 13px 8px;
         }
-        .dding {
-            background-color: #2B6E30;
+        .kc {
+            background-color: #FF92A7;
             color: #FFFFFF;
         }
-        .online {
+        .onli100million {
+            background-color: #282b49;
+            color:#FFFFFF;
+        }
+        .free12 {
+            background-color: orange;
+            color:#FFFFFF;
+        }
+
+        .sparta {
             background-color: #e8344e;
-            color:#FFFFFF;
-        }
-        .hang {
-            background-color: #f50000;
-            color:#FFFFFF;
-        }
-        .chang {
-            background-color: #0f16ae;
             color:#FFFFFF;
         }
         .footer {
@@ -105,13 +106,10 @@
         <h1 class="main">스파르타코딩클럽</h1>
         <p class="sub">완주까지 함께 찐한 관리, 스파르타코딩클럽</p>
         <div class="buttons">
-            <a class="bigbutton"target="_blank" href="https://spartacodingclub.kr/online/special/bucketlist?utm_source=instagram&utm_medium=profile&utm_campaign=%EB%AC%B4%EB%A3%8C%ED%8A%B9%EA%B0%95&utm_content=%EC%83%81%EC%84%B8&utm_term=12%EC%9B%94%EC%9B%94%EA%B0%84%EC%BD%94%EB%94%A9_insta_221205">[무료특강] 12월 한정 월간코딩</a>
-            <a class="online"target="_blank" href="https://spartacodingclub.kr/?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EB%A9%94%EC%9D%B8&utm_term=insta_spa_pro_221114">스파르타코딩클럽</a>
-            <a class="dding" target="_blank" href="https://spartacodingclub.kr/nb?utm_source=instagram&utm_medium=profile&utm_campaign=%EB%82%B4%EC%9D%BC%EB%B0%B0%EC%9B%80%EB%8B%A8&utm_content=%EB%A9%94%EC%9D%B8&utm_term=insta_spa_pro_221114">내일배움단 - 국비지원</a>
-            <a class="hang" target="_blank" href="https://hanghae99.spartacodingclub.kr/?utm_source=instagram&utm_medium=profile&utm_campaign=%ED%95%AD%ED%95%B4&utm_content=%EB%A9%94%EC%9D%B8&utm_term=insta_spa_pro_221114">항해99 - 99일만에 개발자로</a>
-        </div>
-        <div class="buttons">
-            <a class="chang"target="_blank" href="https://chang.spartacodingclub.kr/?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%B0%BD&utm_content=%EB%A9%94%EC%9D%B8&utm_term=insta_spa_pro_221114">{창} - IT 창업 부트캠프</a>
+            <a class="kc"target="_blank" href="https://spartacodingclub.kr/community/2022awards?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=%ED%81%B0%EC%9D%BC%EC%B1%8C%EB%A6%B0%EC%A7%80_221219">[수강생 목소리]-2022 큰일 챌린지</a>
+            <a class="onli100million" target="_blank" href="https://spartacodingclub.kr/100million?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=1%EC%96%B5%20%EC%B1%8C%EB%A6%B0%EC%A7%80_221219">[이벤트]-스파르타 1억 챌린지</a>
+            <a class="free12"target="_blank" href="https://spartacodingclub.kr/?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EB%A9%94%EC%9D%B8&utm_term=insta_spa_pro_221114">[무료특강]-12월 월간코딩 </a>
+            <a class="sparta" target="_blank" href="https://spartacodingclub.kr/catalog?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=%EB%AC%B4%EB%A3%8C%EA%B0%95%EC%9D%98%20_221219">스파르타코딩클럽</a>
         </div>
         <div class="footer">@SpartaCodingClub</div>
     </div>
