--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="buttons">
             <a class="kc"target="_blank" href="https://spartacodingclub.kr/community/2022awards?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=%ED%81%B0%EC%9D%BC%EC%B1%8C%EB%A6%B0%EC%A7%80_221219">[수강생 목소리]-2022 큰일 챌린지</a>
             <a class="onli100million" target="_blank" href="https://spartacodingclub.kr/100million?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=1%EC%96%B5%20%EC%B1%8C%EB%A6%B0%EC%A7%80_221219">[이벤트]-스파르타 1억 챌린지</a>
-            <a class="free12"target="_blank" href="https://spartacodingclub.kr/?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EB%A9%94%EC%9D%B8&utm_term=insta_spa_pro_221114">[무료특강]-12월 월간코딩 </a>
+            <a class="free12"target="_blank" href="https://spartacodingclub.kr/online/special/bucketlist?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=12%EC%9B%94%EC%9B%94%EA%B0%84%EC%BD%94%EB%94%A9_221219">[무료특강]-12월 월간코딩 </a>
             <a class="sparta" target="_blank" href="https://spartacodingclub.kr/catalog?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=%EB%AC%B4%EB%A3%8C%EA%B0%95%EC%9D%98%20_221219">스파르타코딩클럽</a>
         </div>
         <div class="footer">@SpartaCodingClub</div>
