--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             background-color: #e8344e;
             color:#FFFFFF;
         }
-        .sparta {
+        .blog {
             background-color: greenyellow;
             color:#FFFFFF;
         }
@@ -114,7 +114,7 @@
             <a class="onli100million" target="_blank" href="https://spartacodingclub.kr/100million?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=1%EC%96%B5%20%EC%B1%8C%EB%A6%B0%EC%A7%80_221219">[이벤트]-스파르타 1억 챌린지</a>
             <a class="free12"target="_blank" href="https://spartacodingclub.kr/online/special/bucketlist?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=12%EC%9B%94%EC%9B%94%EA%B0%84%EC%BD%94%EB%94%A9_221219">[무료특강]-12월 월간코딩 </a>
             <a class="sparta" target="_blank" href="https://spartacodingclub.kr/catalog?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=%EB%AC%B4%EB%A3%8C%EA%B0%95%EC%9D%98%20_221219">스파르타코딩클럽</a>
-        </div><a class="sparta" target="_blank" href="https://spartacodingclub.kr/blog/2022awards-lifestyle?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EB%B8%94%EB%A1%9C%EA%B7%B8&utm_term=%ED%81%B0%EC%9D%BC%20%EC%96%B4%EC%9B%8C%EC%A6%88_221220">[큰일 ep.01] 서른 살 취준생의 N번째 도전</a>
+        </div><a class="blog" target="_blank" href="https://spartacodingclub.kr/blog/2022awards-lifestyle?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EB%B8%94%EB%A1%9C%EA%B7%B8&utm_term=%ED%81%B0%EC%9D%BC%20%EC%96%B4%EC%9B%8C%EC%A6%88_221220">[큰일 ep.01] 서른 살 취준생의 N번째 도전</a>
     </div><a class="sparta" target="_blank" href="">스파르타코딩클럽</a>
         <div class="footer">@SpartaCodingClub</div>
     </div>
