--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             box-shadow: 0px 4px 16px rgba(232, 52, 78, 0.2);
             margin: 0px 8px 13px 8px;
         }
-        .kc {
+        .blog2 {
             background-color: #FF92A7;
             color: #FFFFFF;
         }
@@ -117,11 +117,10 @@
         <h1 class="main">스파르타코딩클럽</h1>
         <p class="sub">완주까지 함께 찐한 관리, 스파르타코딩클럽</p>
         <div class="buttons">
-            <a class="kc"target="_blank" href="https://spartacodingclub.kr/community/2022awards?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=%ED%81%B0%EC%9D%BC%EC%B1%8C%EB%A6%B0%EC%A7%80_221219">[수강생 목소리]-2022 큰일 어워즈</a>
             <a class="onli100million" target="_blank" href="https://spartacodingclub.kr/100million?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=1%EC%96%B5%20%EC%B1%8C%EB%A6%B0%EC%A7%80_221219">[이벤트]-스파르타 1억 챌린지</a>
-            <a class="free12"target="_blank" href="https://spartacodingclub.kr/online/special/bucketlist?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=12%EC%9B%94%EC%9B%94%EA%B0%84%EC%BD%94%EB%94%A9_221219">[무료특강]-12월 월간코딩 </a>
-            <a class="sparta" target="_blank" href="https://spartacodingclub.kr/catalog?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=%EB%AC%B4%EB%A3%8C%EA%B0%95%EC%9D%98%20_221219">스파르타코딩클럽</a>
             <a class="blog" target="_blank" href="https://spartacodingclub.kr/blog/2022awards-lifestyle?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EB%B8%94%EB%A1%9C%EA%B7%B8&utm_term=%ED%81%B0%EC%9D%BC%20%EC%96%B4%EC%9B%8C%EC%A6%88_221220">[큰일 ep.01] 서른 살 취준생의 N번째 도전</a>
+            <a class="blog2"target="_blank" href="https://spartacodingclub.kr/community/2022awards?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=%ED%81%B0%EC%9D%BC%EC%B1%8C%EB%A6%B0%EC%A7%80_221219">[큰일 ep.02]하고 싶은 일 하고 살기 </a>
+            <a class="sparta" target="_blank" href="https://spartacodingclub.kr/catalog?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=%EB%AC%B4%EB%A3%8C%EA%B0%95%EC%9D%98%20_221219">스파르타코딩클럽</a>
         </div>
     </div>
     <div class="out">
