--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
             box-shadow: 0px 4px 16px rgba(232, 52, 78, 0.2);
             margin: 0px 8px 13px 8px;
         }
-        .blog2 {
-            background-color: #FF92A7;
+        .onli100million {
+            background-color: navy;
             color: #FFFFFF;
         }
-        .onli100million {
-            background-color: #282b49;
+        .blog {
+            background-color: #FF92A7;
             color:#FFFFFF;
         }
-        .free12 {
-            background-color: orange;
+        .blog2 {
+            background-color: rgb(32, 113, 32);
             color:#FFFFFF;
         }
 
@@ -93,10 +93,7 @@
             background-color: #e8344e;
             color:#FFFFFF;
             display: inline-block;
-        }
-        .blog {
-            background-color: green;
-            color:#FFFFFF;
+        
         }
         .footer {
             color: #333333;
@@ -119,7 +116,7 @@
         <div class="buttons">
             <a class="onli100million" target="_blank" href="https://spartacodingclub.kr/100million?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=1%EC%96%B5%20%EC%B1%8C%EB%A6%B0%EC%A7%80_221219">[이벤트]-스파르타 1억 챌린지</a>
             <a class="blog" target="_blank" href="https://spartacodingclub.kr/blog/2022awards-lifestyle?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EB%B8%94%EB%A1%9C%EA%B7%B8&utm_term=%ED%81%B0%EC%9D%BC%20%EC%96%B4%EC%9B%8C%EC%A6%88_221220">[큰일 ep.01] 서른 살 취준생의 N번째 도전</a>
-            <a class="blog2"target="_blank" href="https://spartacodingclub.kr/community/2022awards?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=%ED%81%B0%EC%9D%BC%EC%B1%8C%EB%A6%B0%EC%A7%80_221219">[큰일 ep.02]하고 싶은 일 하고 살기 </a>
+            <a class="blog2"target="_blank" href="https://spartacodingclub.kr/blog/2022awards-maker">[큰일 ep.02]하고 싶은 일 하고 살기 </a>
             <a class="sparta" target="_blank" href="https://spartacodingclub.kr/catalog?utm_source=instagram&utm_medium=profile&utm_campaign=%EC%98%A8%EB%9D%BC%EC%9D%B8&utm_content=%EC%83%81%EC%84%B8&utm_term=%EB%AC%B4%EB%A3%8C%EA%B0%95%EC%9D%98%20_221219">스파르타코딩클럽</a>
         </div>
     </div>
