--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         }
 
         .blog3 {
-            background-color: #plum;
+            background-color:plum;
             color:#FFFFFF;
 
         }
